--- a/thesis.tex
+++ b/thesis.tex
@@ -164,7 +164,7 @@ Kraków, 2012
 
 \include{1_introduction/introduction}	% background information
 \include{2/problem_analysis}
-%\include{3/technologie}						% aims of the project
+\include{3/technologie}						% aims of the project
 
 \include{4/wymagania}						
 	
